# MSc-Computational-Science

./: README.md
CompScience/1a2011/ICS/: 0010012v1  0411017v1  LpCpK5.txt  SIR.py  SIRS.py  SIR_graphics.py  pictures.nb  review_ICS.txt  rhalve.txt  rhalve_tinf_check.txt  rtotal.txt  test.txt  (+4 more)
CompScience/1c2012/CC/heat-10194754/mpi/: Makefile  Makefile.am  Makefile.in  aclocal.m4  benchmark  benchmark.c  broadcast_test  broadcast_test.c  compute.c  config.h  config.h.in  config.status  configure  configure.ac  heat  seq.c
CompScience/1c2012/CC/heat-10194754/mpi/.deps/: benchmark.Po  broadcast_test.Po  compute.Po  img.Po
CompScience/1c2012/CC/heat-10194754/mpi/Report4/: graphs.nb  report.aux  report.tex  report.toc
CompScience/1c2012/CC/heat-10194754/mpi/autom4te.cache/: output.1  requests  traces.0  traces.1
CompScience/1c2012/CC/heat-10194754/pth/: Makefile  Makefile.am  Makefile.in  POSIX_barrier  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  heat  mutex_barrier  sem_barrier  sieve
CompScience/1c2012/CC/heat-10194754/pth/.deps/: compute.Po  input.Po  mutex.Po  original.Po  output.Po  sema.Po  sieve.Po  sieve_fast.Po
CompScience/1c2012/CC/heat-10194754/pth/Report2/: graphs.nb  report.aux  report.tex  report.toc
CompScience/1c2012/CC/heat-10194754/pth/assignment_2.3/: mutex.c  original.c  sema.c
CompScience/1c2012/CC/heat-10194754/pth/assignment_2.4/: sieve_fast.c  sieve_slow.c
CompScience/1c2012/CC/heat-10194754/pth/autom4te.cache/: output.0  requests  traces.0  traces.1
CompScience/1c2012/CC/heat-10194754/pth/job/: heat
(+444 files in other folders)
